--- a/uppointment/assets/style/page3.css
+++ b/uppointment/assets/style/page3.css
@@ -6,7 +6,7 @@
 }
 
 .wrapper {
-    max-width: 1750px;
+    max-width: 1075px;
     margin: 0 auto;
     padding:0 20px;
 }
@@ -330,8 +330,8 @@ section {
 }
 
 .schedule {
-    padding-top: 200px;
-    padding-bottom: 212px;
+    padding-top: 125px;
+    padding-bottom: 125px;
 }
 
 .schedule__content {
@@ -341,27 +341,33 @@ section {
 .schedule__subtitle{
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 30px;
+    font-size: 24px;
     line-height: 37px;
     text-align: center;
     color: #303A4B;
-    margin-bottom: 41px;
+    margin-bottom: 11px;
 }
 
 .schedule__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    font-size: 50px;
-    line-height: 58px;
+    font-size: 30px;
+    line-height: 38px;
     text-align: center;
     color: #303A4B;
-    max-width: 1254px;
-    margin-bottom: 38px;
+    max-width: 790px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 28px;
 }
 
 .schedule__bg {
     margin: 0 auto;
     text-align: center;
+}
+
+.schedule__bg img {
+    max-height: 390px;
 }
 
 .second-block__content {
@@ -373,8 +379,8 @@ section {
 .second-block__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 30px;
-    line-height: 40px;
+    font-size: 20px;
+    line-height: 28px;
     color: #303A4B;
     margin-bottom: 21px;
 }
@@ -382,18 +388,18 @@ section {
 .second-block__paragraph {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 14px;
+    line-height: 24px;
     color: #676767;
     max-width: 755px;
-    margin-bottom: 49px;
+    margin-bottom: 30px;
 }
 
 .second-block__subtitle {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 16px;
+    line-height: 22px;
     color: #303A4B;
 }
 
@@ -409,11 +415,17 @@ section {
 
 }
 
+
+.second-block__bg img:first-child {
+    max-height: 350px;
+}
+
 .second-block__bg .first-image {
     position: absolute;
     top: 50%;
     right: 40%;
     transform: translateY(-50%);
+    max-height: 400px;
 }
 
 .second-block__bg .second-image {
@@ -421,6 +433,7 @@ section {
     top: 50%;
     right: 20%;
     transform: translateY(-50%);
+    max-height: 469px;
 }
 
 /* styling for-whom section */
@@ -432,7 +445,7 @@ section {
 .for-whom__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 40px;
+    font-size: 28px;
     line-height: 55px;
     text-align: center;
     color: #303A4B;
@@ -443,7 +456,7 @@ section {
 }
 
 .for-whom__content {
-    margin-top: 85px;
+    margin-top: 65px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -451,11 +464,18 @@ section {
 }
 
 .for-whom__block {
-    flex-basis: 33%;
-    padding-left: 7%;
+    flex-basis: 26%;
     display: flex;
     align-items: center;
     margin-bottom: 33px;
+}
+
+.for-whom__content .for-whom__block:nth-child(3n+3) {
+    padding-left: 20px;
+}
+
+.for-whom__content .for-whom__block:nth-child(3n+2) {
+    padding-left: 40px;
 }
 
 .for-whom__block-paragraph {
@@ -485,7 +505,7 @@ section {
 .planning__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 28px;
     line-height: 29px;
     color: #303A4B;
     position: relative;
@@ -507,17 +527,21 @@ section {
 .planning__paragraph {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 25px;
+    font-size: 14px;
+    line-height: 22px;
     color: #676767;
 }
 
 .planning__description .planning__paragraph:nth-child(2) {
-    margin-bottom: 102px;
+    margin-bottom: 62px;
 }
 
 .planning__bg {
     position: relative;
+}
+
+.planning__bg img:first-child {
+    max-height: 370px;
 }
 
 .planning__bg .calendar {
@@ -525,6 +549,7 @@ section {
     right: 1%;
     top: 50%;
     transform: translateY(-50%);
+    max-height: 260px;
 }
 
 .planning__bg .recording {
@@ -532,6 +557,7 @@ section {
     right: 1%;
     top: 24%;
     transform: translateY(-50%);
+    max-height: 295px;
 }
 
 /* styling scheduling-appointments */
@@ -551,8 +577,8 @@ section {
     text-align: right;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 30px;
-    line-height: 29px;
+    font-size: 28px;
+    line-height: 26px;
     color: #303A4B;
     position: relative;
     margin-bottom: 30px;
@@ -574,11 +600,15 @@ section {
     position: relative;
 }
 
+.scheduling-appointments__bg img:first-child {
+    max-height: 350px;
+}
+
 .scheduling-appointments__paragraph {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 25px;
+    font-size: 14px;
+    line-height: 22px;
     color: #676767;
     text-align: right;
 }
@@ -588,6 +618,7 @@ section {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    max-height: 430px;
 }
 
 /* styling sixth-block */
@@ -604,8 +635,8 @@ section {
 .sixth-block__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 30px;
-    line-height: 29px;
+    font-size: 28px;
+    line-height: 26px;
     color: #303A4B;
     position: relative;
     margin-bottom: 30px;
@@ -626,8 +657,8 @@ section {
 .sixth-block__paragraph {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 25px;
+    font-size: 14px;
+    line-height: 22px;
     color: #676767;
 }
 
@@ -635,23 +666,30 @@ section {
     position: relative;
 }
 
+.sixth-block__bg img:first-child {
+    max-height: 415px;
+}
+
 .sixth-block__bg .clock {
     position: absolute;
     bottom: 7%;
     right: 10%;
+    max-height: 230px;
 }
 
 .sixth-block__description .sixth-block__paragraph:nth-child(2) {
-    margin-bottom: 97px;
+    margin-bottom: 47px;
 }
 
 /* styling how-it-works section */
-
+.how-it-works {
+    padding: 40px 0;
+}
 .how-it-works__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 40px;
-    line-height: 49px;
+    font-size: 28px;
+    line-height: 30px;
     text-align: center;
     color: #303A4B;
     margin-bottom: 29px;
@@ -660,8 +698,8 @@ section {
 .how-it-works__subtitle {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 18px;
+    line-height: 26px;
     color: #303A4B;
     text-align: center;
 }
@@ -707,18 +745,18 @@ section {
 .how-it-works__block .block__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 20px;
-    line-height: 29px;
+    font-size: 18px;
+    line-height: 26px;
     text-align: center;
     color: #303A4B;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 .how-it-works__block .block__paragraph {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 25px;
+    font-size: 14px;
+    line-height: 22px;
     text-align: center;
     color: #676767;
     
@@ -726,11 +764,15 @@ section {
 
 /* styling paid section */
 
+.paid {
+    padding: 40px 0 ;
+}
+
 .paid__title {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    font-size: 40px;
-    line-height: 49px;
+    font-size: 28px;
+    line-height: 37px;
     text-align: center;
     color: #303A4B;
     margin-bottom: 30px;
@@ -739,8 +781,8 @@ section {
 .paid__paragraph {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 18px;
+    line-height: 26px;
     text-align: center;
     color: #676767;
 }
@@ -750,6 +792,10 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.paid__payment-methods img {
+    max-height: 30px;
 }
 
 /*styling register section */
@@ -763,8 +809,8 @@ section {
 .register__paragraph {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 20px;
-    line-height: 28px;
+    font-size: 18px;
+    line-height: 26px;
     text-align: center;
     color: #303A4B;
     max-width: 1249px;
@@ -774,7 +820,7 @@ section {
 .register__button {
     margin-top: 38px;
     background: transparent;
-    padding: 18px 60px;
+    padding: 12px 50px;
     border: 2px solid #303A4B;
     border-radius: 30px;
     font-weight: normal;
@@ -790,7 +836,7 @@ section {
 /* styling footer section */
 
 .footer {
-    padding: 53px 0;
+    padding: 42px 0;
 }
 
 .footer .wrapper {
@@ -802,22 +848,25 @@ section {
 .footer-description .copyright, .footer-span {
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 14px;
+    line-height: 18px;
     color: #303A4B;
+}
+
+.footer-description .copyright {
+    margin-bottom: 14px;
 }
 
 .footer-span {
     margin-right: 40px;
-    margin-top: 14px;
 }
 
 .footer__navigation .navigation__list .footer-list__link {
     text-decoration: none;
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 14px;
+    line-height: 18px;
     color: #303A4B;
 }
 
